--- a/TD4/orders.yaml
+++ b/TD4/orders.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: STD23034 - TD4
-  version: '1.0.2'
+  version: '1.0.4'
 servers:
   - url: https://localhost.std23034.com
 paths:
@@ -10,91 +10,58 @@ paths:
       parameters:
         - in: path
           name: customerId
-          required: true
           schema:
             type: string
+          required: true
       responses:
         200:
-          description: Liste des commandes du client
+          description: List of orders for a specific customer
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/Order'
-
     post:
       parameters:
         - in: path
           name: customerId
-          required: true
           schema:
             type: string
+          required: true
       requestBody:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                reference:
-                  type: string
-                meals:
-                  type: array
-                  items:
-                    type: object
-                    properties:
-                      mealId:
-                        type: string
-                      quantity:
-                        type: integer
-      required: true
+              $ref: '#/components/schemas/CreateOrder'
+        required: true
       responses:
         200:
-          description: Commande créée avec succès
+          description: Order created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Order'
-
-  /customers/{customerId}/orders/{orderId}:
     put:
       parameters:
         - in: path
           name: customerId
-          required: true
           schema:
             type: string
-        - in: path
-          name: orderId
           required: true
-          schema:
-            type: string
       requestBody:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                reference:
-                  type: string
-                meals:
-                  type: array
-                  items:
-                    type: object
-                    properties:
-                      mealId:
-                        type: string
-                      quantity:
-                        type: integer
-      required: true
+              $ref: '#/components/schemas/UpdateOrder'
+        required: true
       responses:
         200:
-          description: Commande modifiée avec succès
+          description: Order updated
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Order'
-
 components:
   schemas:
     Order:
@@ -110,9 +77,28 @@ components:
             type: object
             properties:
               meal:
-                $ref: '../TD3/td3-v1.yaml#/components/schemas/Meal'
+                $ref: '#/components/schemas/Meal'
               quantity:
                 type: integer
         orderDatetime:
           type: string
           format: date-time
+
+    CreateOrder:
+      type: object
+      properties:
+        reference:
+          type: string
+        meals:
+          type: array
+          items:
+            type: object
+            properties:
+              mealId:
+                type: string
+              quantity:
+                type: integer
+
+    UpdateOrder:
+      allOf:
+        - $ref: '#/components/schemas/CreateOrder'
