--- a/TD4/orders.yaml
+++ b/TD4/orders.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: STD23034 - TD4
-  version: '1.0.4'
+  version: '1.0.2'
 servers:
   - url: https://localhost.std23034.com
 paths:
@@ -10,58 +10,91 @@ paths:
       parameters:
         - in: path
           name: customerId
+          required: true
           schema:
             type: string
-          required: true
       responses:
         200:
-          description: List of orders for a specific customer
+          description: Liste des commandes du client
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/Order'
+
     post:
       parameters:
         - in: path
           name: customerId
+          required: true
           schema:
             type: string
-          required: true
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateOrder'
-        required: true
+              type: object
+              properties:
+                reference:
+                  type: string
+                meals:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      mealId:
+                        type: string
+                      quantity:
+                        type: integer
+      required: true
       responses:
         200:
-          description: Order created
+          description: Commande créée avec succès
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Order'
+
+  /customers/{customerId}/orders/{orderId}:
     put:
       parameters:
         - in: path
           name: customerId
+          required: true
           schema:
             type: string
+        - in: path
+          name: orderId
           required: true
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UpdateOrder'
-        required: true
+              type: object
+              properties:
+                reference:
+                  type: string
+                meals:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      mealId:
+                        type: string
+                      quantity:
+                        type: integer
+      required: true
       responses:
         200:
-          description: Order updated
+          description: Commande modifiée avec succès
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Order'
+
 components:
   schemas:
     Order:
@@ -77,28 +110,9 @@ components:
             type: object
             properties:
               meal:
-                $ref: '#/components/schemas/Meal'
+                $ref: '../TD3/td3-v1.yaml#/components/schemas/Meal'
               quantity:
                 type: integer
         orderDatetime:
           type: string
           format: date-time
-
-    CreateOrder:
-      type: object
-      properties:
-        reference:
-          type: string
-        meals:
-          type: array
-          items:
-            type: object
-            properties:
-              mealId:
-                type: string
-              quantity:
-                type: integer
-
-    UpdateOrder:
-      allOf:
-        - $ref: '#/components/schemas/CreateOrder'
